feature notices allowDelete
add properties allowDelete
